zu_parser.y
%{
// $Id: zu_parser.y,v 1.9 2016/03/17 17:56:54 ist178414 Exp $
//-- don't change *any* of these: if you do, you'll break the compiler.
#include <cdk/compiler.h>
#include "ast/all.h"
#define LINE       compiler->scanner()->lineno()
#define yylex()    compiler->scanner()->scan()
#define yyerror(s) compiler->scanner()->error(s)
#define YYPARSE_PARAM_TYPE std::shared_ptr<cdk::compiler>
#define YYPARSE_PARAM      compiler
//-- don't change *any* of these --- END!
%}

%union {
  int                   i;	/* integer value */
  std::string          *s;	/* symbol name or string literal */
  cdk::basic_node      *node;	/* node pointer */
  cdk::sequence_node   *sequence;
  cdk::expression_node *expression; /* expression nodes */
  zu::lvalue_node  *lvalue;
};

%token <i> tINTEGER
%token <s> tIDENTIFIER tSTRING
%token tIF tPRINT tREAD tBEGIN tEND tFOR

%nonassoc tIFX
%nonassoc tELSE

%right '='
%left tGE tLE tEQ tNE '>' '<'
%left '+' '-'
%left '*' '/' '%'
%nonassoc tUNARY

%type <node> stmt program
%type <sequence> list
%type <expression> expr
%type <lvalue> lval

%{
//-- The rules below will be included in yyparse, the main parsing function.
%}
%%

program	: tBEGIN list tEND { /* compiler->ast(new zu::program_node(LINE, $2)); */}
	      ;

list : stmt	     { $$ = new cdk::sequence_node(LINE, $1); }
	   | list stmt { $$ = new cdk::sequence_node(LINE, $2, $1); }
	   ;

stmt : expr ';'                                         { $$ = new zu::evaluation_node(LINE, $1); }
 	   | tPRINT expr ';'                                  { /*FIXME: $$ = new zu::print_node(LINE, $2);*/ }
     | tREAD lval ';'                                   { $$ = new zu::read_node(LINE, $2); }
     | tFOR '(' list ';' list ';' list ')' stmt         { $$ = new zu::for_node(LINE, $3, $5, $7, $9); }
     | tIF '(' expr ')' stmt %prec tIFX                 { $$ = new zu::if_node(LINE, $3, $5); }
     | tIF '(' expr ')' stmt tELSE stmt                 { $$ = new zu::if_else_node(LINE, $3, $5, $7); }
     | '{' list '}'                                     { $$ = $2; }
     ;

expr : tINTEGER                { $$ = new cdk::integer_node(LINE, $1); }
	   | tSTRING                 { $$ = new cdk::string_node(LINE, $1); }
     | '-' expr %prec tUNARY   { $$ = new cdk::neg_node(LINE, $2); }
     | expr '+' expr	         { $$ = new cdk::add_node(LINE, $1, $3); }
     | expr '-' expr	         { $$ = new cdk::sub_node(LINE, $1, $3); }
     | expr '*' expr	         { $$ = new cdk::mul_node(LINE, $1, $3); }
     | expr '/' expr	         { $$ = new cdk::div_node(LINE, $1, $3); }
     | expr '%' expr	         { $$ = new cdk::mod_node(LINE, $1, $3); }
     | expr '<' expr	         { $$ = new cdk::lt_node(LINE, $1, $3); }
     | expr '>' expr	         { $$ = new cdk::gt_node(LINE, $1, $3); }
     | expr tGE expr	         { $$ = new cdk::ge_node(LINE, $1, $3); }
     | expr tLE expr           { $$ = new cdk::le_node(LINE, $1, $3); }
     | expr tNE expr	         { $$ = new cdk::ne_node(LINE, $1, $3); }
     | expr tEQ expr	         { $$ = new cdk::eq_node(LINE, $1, $3); }
     | '(' expr ')'            { $$ = $2; }
     | lval                    { $$ = new zu::rvalue_node(LINE, $1); }  //FIXME
     | lval '=' expr           { $$ = new zu::assignment_node(LINE, $1, $3); }
     ;

lval : tIDENTIFIER             { /*FIXME: $$ = new zu::lvalue_node(LINE, $1);*/ }
     ;

%%
