zu_parser.output
   0  $accept : program $end

   1  program : tBEGIN list tEND

   2  list : stmt
   3       | list stmt

   4  stmt : expr ';'
   5       | tPRINT expr ';'
   6       | tREAD lval ';'
   7       | tFOR '(' list ';' list ';' list ')' stmt
   8       | tIF '(' expr ')' stmt
   9       | tIF '(' expr ')' stmt tELSE stmt
  10       | '{' list '}'

  11  expr : tINTEGER
  12       | tSTRING
  13       | '-' expr
  14       | expr '+' expr
  15       | expr '-' expr
  16       | expr '*' expr
  17       | expr '/' expr
  18       | expr '%' expr
  19       | expr '<' expr
  20       | expr '>' expr
  21       | expr tGE expr
  22       | expr tLE expr
  23       | expr tNE expr
  24       | expr tEQ expr
  25       | '(' expr ')'
  26       | lval
  27       | lval '=' expr

  28  lval : tIDENTIFIER

state 0
	$accept : . program $end  (0)

	tBEGIN  shift 1
	.  error

	program  goto 2


state 1
	program : tBEGIN . list tEND  (1)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 13
	list  goto 14
	expr  goto 15
	lval  goto 16


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	expr : tINTEGER .  (11)

	.  reduce 11


state 4
	lval : tIDENTIFIER .  (28)

	.  reduce 28


state 5
	expr : tSTRING .  (12)

	.  reduce 12


state 6
	stmt : tIF . '(' expr ')' stmt  (8)
	stmt : tIF . '(' expr ')' stmt tELSE stmt  (9)

	'('  shift 17
	.  error


state 7
	stmt : tPRINT . expr ';'  (5)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 18
	lval  goto 16


state 8
	stmt : tREAD . lval ';'  (6)

	tIDENTIFIER  shift 4
	.  error

	lval  goto 19


state 9
	stmt : tFOR . '(' list ';' list ';' list ')' stmt  (7)

	'('  shift 20
	.  error


state 10
	expr : '-' . expr  (13)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 21
	lval  goto 16


state 11
	expr : '(' . expr ')'  (25)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 22
	lval  goto 16


state 12
	stmt : '{' . list '}'  (10)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 13
	list  goto 23
	expr  goto 15
	lval  goto 16


state 13
	list : stmt .  (2)

	.  reduce 2


state 14
	program : tBEGIN list . tEND  (1)
	list : list . stmt  (3)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tEND  shift 24
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 25
	expr  goto 15
	lval  goto 16


state 15
	stmt : expr . ';'  (4)
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	tGE  shift 26
	tLE  shift 27
	tEQ  shift 28
	tNE  shift 29
	'>'  shift 30
	'<'  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	';'  shift 37
	.  error


state 16
	expr : lval .  (26)
	expr : lval . '=' expr  (27)

	'='  shift 38
	tGE  reduce 26
	tLE  reduce 26
	tEQ  reduce 26
	tNE  reduce 26
	'>'  reduce 26
	'<'  reduce 26
	'+'  reduce 26
	'-'  reduce 26
	'*'  reduce 26
	'/'  reduce 26
	'%'  reduce 26
	';'  reduce 26
	')'  reduce 26


state 17
	stmt : tIF '(' . expr ')' stmt  (8)
	stmt : tIF '(' . expr ')' stmt tELSE stmt  (9)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 39
	lval  goto 16


state 18
	stmt : tPRINT expr . ';'  (5)
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	tGE  shift 26
	tLE  shift 27
	tEQ  shift 28
	tNE  shift 29
	'>'  shift 30
	'<'  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	';'  shift 40
	.  error


state 19
	stmt : tREAD lval . ';'  (6)

	';'  shift 41
	.  error


state 20
	stmt : tFOR '(' . list ';' list ';' list ')' stmt  (7)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 13
	list  goto 42
	expr  goto 15
	lval  goto 16


state 21
	expr : '-' expr .  (13)
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	.  reduce 13


state 22
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)
	expr : '(' expr . ')'  (25)

	tGE  shift 26
	tLE  shift 27
	tEQ  shift 28
	tNE  shift 29
	'>'  shift 30
	'<'  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	')'  shift 43
	.  error


state 23
	list : list . stmt  (3)
	stmt : '{' list . '}'  (10)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	'}'  shift 44
	.  error

	stmt  goto 25
	expr  goto 15
	lval  goto 16


state 24
	program : tBEGIN list tEND .  (1)

	.  reduce 1


state 25
	list : list stmt .  (3)

	.  reduce 3


state 26
	expr : expr tGE . expr  (21)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 45
	lval  goto 16


state 27
	expr : expr tLE . expr  (22)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 46
	lval  goto 16


state 28
	expr : expr tEQ . expr  (24)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 47
	lval  goto 16


state 29
	expr : expr tNE . expr  (23)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 48
	lval  goto 16


state 30
	expr : expr '>' . expr  (20)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 49
	lval  goto 16


state 31
	expr : expr '<' . expr  (19)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 50
	lval  goto 16


state 32
	expr : expr '+' . expr  (14)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 51
	lval  goto 16


state 33
	expr : expr '-' . expr  (15)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 52
	lval  goto 16


state 34
	expr : expr '*' . expr  (16)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 53
	lval  goto 16


state 35
	expr : expr '/' . expr  (17)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 54
	lval  goto 16


state 36
	expr : expr '%' . expr  (18)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 55
	lval  goto 16


state 37
	stmt : expr ';' .  (4)

	.  reduce 4


state 38
	expr : lval '=' . expr  (27)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	'-'  shift 10
	'('  shift 11
	.  error

	expr  goto 56
	lval  goto 16


state 39
	stmt : tIF '(' expr . ')' stmt  (8)
	stmt : tIF '(' expr . ')' stmt tELSE stmt  (9)
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	tGE  shift 26
	tLE  shift 27
	tEQ  shift 28
	tNE  shift 29
	'>'  shift 30
	'<'  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	')'  shift 57
	.  error


state 40
	stmt : tPRINT expr ';' .  (5)

	.  reduce 5


state 41
	stmt : tREAD lval ';' .  (6)

	.  reduce 6


state 42
	list : list . stmt  (3)
	stmt : tFOR '(' list . ';' list ';' list ')' stmt  (7)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	';'  shift 58
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 25
	expr  goto 15
	lval  goto 16


state 43
	expr : '(' expr ')' .  (25)

	.  reduce 25


state 44
	stmt : '{' list '}' .  (10)

	.  reduce 10


state 45
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr tGE expr .  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 21
	tLE  reduce 21
	tEQ  reduce 21
	tNE  reduce 21
	'>'  reduce 21
	'<'  reduce 21
	';'  reduce 21
	')'  reduce 21


state 46
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr tLE expr .  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 22
	tLE  reduce 22
	tEQ  reduce 22
	tNE  reduce 22
	'>'  reduce 22
	'<'  reduce 22
	';'  reduce 22
	')'  reduce 22


state 47
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)
	expr : expr tEQ expr .  (24)

	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 24
	tLE  reduce 24
	tEQ  reduce 24
	tNE  reduce 24
	'>'  reduce 24
	'<'  reduce 24
	';'  reduce 24
	')'  reduce 24


state 48
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr tNE expr .  (23)
	expr : expr . tEQ expr  (24)

	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 23
	tLE  reduce 23
	tEQ  reduce 23
	tNE  reduce 23
	'>'  reduce 23
	'<'  reduce 23
	';'  reduce 23
	')'  reduce 23


state 49
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr '>' expr .  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 20
	tLE  reduce 20
	tEQ  reduce 20
	tNE  reduce 20
	'>'  reduce 20
	'<'  reduce 20
	';'  reduce 20
	')'  reduce 20


state 50
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr '<' expr .  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 19
	tLE  reduce 19
	tEQ  reduce 19
	tNE  reduce 19
	'>'  reduce 19
	'<'  reduce 19
	';'  reduce 19
	')'  reduce 19


state 51
	expr : expr . '+' expr  (14)
	expr : expr '+' expr .  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 14
	tLE  reduce 14
	tEQ  reduce 14
	tNE  reduce 14
	'>'  reduce 14
	'<'  reduce 14
	'+'  reduce 14
	'-'  reduce 14
	';'  reduce 14
	')'  reduce 14


state 52
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr '-' expr .  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	tGE  reduce 15
	tLE  reduce 15
	tEQ  reduce 15
	tNE  reduce 15
	'>'  reduce 15
	'<'  reduce 15
	'+'  reduce 15
	'-'  reduce 15
	';'  reduce 15
	')'  reduce 15


state 53
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr '*' expr .  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	.  reduce 16


state 54
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr '/' expr .  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	.  reduce 17


state 55
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr '%' expr .  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)

	.  reduce 18


state 56
	expr : expr . '+' expr  (14)
	expr : expr . '-' expr  (15)
	expr : expr . '*' expr  (16)
	expr : expr . '/' expr  (17)
	expr : expr . '%' expr  (18)
	expr : expr . '<' expr  (19)
	expr : expr . '>' expr  (20)
	expr : expr . tGE expr  (21)
	expr : expr . tLE expr  (22)
	expr : expr . tNE expr  (23)
	expr : expr . tEQ expr  (24)
	expr : lval '=' expr .  (27)

	tGE  shift 26
	tLE  shift 27
	tEQ  shift 28
	tNE  shift 29
	'>'  shift 30
	'<'  shift 31
	'+'  shift 32
	'-'  shift 33
	'*'  shift 34
	'/'  shift 35
	'%'  shift 36
	';'  reduce 27
	')'  reduce 27


state 57
	stmt : tIF '(' expr ')' . stmt  (8)
	stmt : tIF '(' expr ')' . stmt tELSE stmt  (9)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 59
	expr  goto 15
	lval  goto 16


state 58
	stmt : tFOR '(' list ';' . list ';' list ')' stmt  (7)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 13
	list  goto 60
	expr  goto 15
	lval  goto 16


state 59
	stmt : tIF '(' expr ')' stmt .  (8)
	stmt : tIF '(' expr ')' stmt . tELSE stmt  (9)

	tELSE  shift 61
	tINTEGER  reduce 8
	tIDENTIFIER  reduce 8
	tSTRING  reduce 8
	tIF  reduce 8
	tPRINT  reduce 8
	tREAD  reduce 8
	tEND  reduce 8
	tFOR  reduce 8
	'-'  reduce 8
	';'  reduce 8
	'('  reduce 8
	')'  reduce 8
	'{'  reduce 8
	'}'  reduce 8


state 60
	list : list . stmt  (3)
	stmt : tFOR '(' list ';' list . ';' list ')' stmt  (7)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	';'  shift 62
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 25
	expr  goto 15
	lval  goto 16


state 61
	stmt : tIF '(' expr ')' stmt tELSE . stmt  (9)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 63
	expr  goto 15
	lval  goto 16


state 62
	stmt : tFOR '(' list ';' list ';' . list ')' stmt  (7)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 13
	list  goto 64
	expr  goto 15
	lval  goto 16


state 63
	stmt : tIF '(' expr ')' stmt tELSE stmt .  (9)

	.  reduce 9


state 64
	list : list . stmt  (3)
	stmt : tFOR '(' list ';' list ';' list . ')' stmt  (7)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	')'  shift 65
	'{'  shift 12
	.  error

	stmt  goto 25
	expr  goto 15
	lval  goto 16


state 65
	stmt : tFOR '(' list ';' list ';' list ')' . stmt  (7)

	tINTEGER  shift 3
	tIDENTIFIER  shift 4
	tSTRING  shift 5
	tIF  shift 6
	tPRINT  shift 7
	tREAD  shift 8
	tFOR  shift 9
	'-'  shift 10
	'('  shift 11
	'{'  shift 12
	.  error

	stmt  goto 66
	expr  goto 15
	lval  goto 16


state 66
	stmt : tFOR '(' list ';' list ';' list ')' stmt .  (7)

	.  reduce 7


31 terminals, 6 nonterminals
29 grammar rules, 67 states
